# apisiat

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 037ee9941b5d_agregar_contingency_event_id_y_emision_.py  2d913fb54643_ampliar_cuf_a_100_caracteres.py  5c193cc7c26f_esquema_inicial_tenants_sucursales_.py  bee29705505a_agregar_tabla_api_keys.py  d56e0b94c900_agregar_numero_nota_codigo_documento_.py
app/: main.py
app/api/v1/: __init__.py  api_keys.py  contingencia.py  facturas.py  notas.py  puntos_venta.py  sucursales.py  tenants.py
app/core/: config.py  database.py  security.py
app/integrations/siat/: exceptions.py  orchestrator.py  paquetes.py  redondeo.py  schemas.py  signing.py  soap_client.py  xml_builder.py
app/models/: __init__.py  billing.py  facturacion.py  integration.py  mixins.py  tenant.py
app/schemas/: api_key.py  audit.py  cliente.py  contingencia.py  factura.py  nota.py  tenant.py
app/services/: auditoria.py  contingencia.py  emision.py
docs/: 00-investigacion-mercado.md  01-marco-regulatorio-sin.md  02-arquitectura.md  03-roadmap-fases-mcp.md  04-adapter-siat.md  05-fase3-piloto-sin.md
tests/: conftest.py
tests/api/v1/: conftest.py  test_api_keys.py  test_contingencia.py  test_facturas.py  test_facturas_emision.py  test_notas.py  test_puntos_venta.py  test_sucursales.py  test_tenants.py
tests/integrations/siat/: test_base64_sin.py  test_cuf_generator.py  test_mock_e2e.py  test_orchestrator.py  test_paquetes.py  test_rc4.py  test_redondeo.py  test_signing.py  test_soap_client.py  (+2 more)
(+10 files in other folders)
