[project]
name = "apisiat"
version = "0.1.0"
description = "Plataforma de facturación electrónica para Bolivia (integración SIN/SIAT)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "redis>=5.1",
    "zeep>=4.3",
    "cryptography>=43",
    "signxml>=4.0",
    "lxml>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
